# obs-image-reaction

./: CMakeLists.txt  README.md  README.zh-TW.md  buildspec.json  image-reaction.c
.github/scripts/: check-format.sh
.github/workflows/: format-check.yml  main.yml
data/locale/: en-US.ini  es-ES.ini  ru-RU.ini  zh-TW.ini
src/: image-reaction.c
